--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div class="redirect-message">
-        <h1>You are being redirected to Notion</h1>
-        <p>Please wait a moment!.</p>
+        <h1>You are being redirected to the bibliography page, hosted by Notion</h1>
+        <p>Please wait a moment!</p>
     </div>
 
 <script>
